--- a/custom_components/versatile_thermostat/translations/sk.json
+++ b/custom_components/versatile_thermostat/translations/sk.json
@@ -259,6 +259,30 @@
           "sync_with_calibration": "Check to apply the offset calibration when synchronizing the internal temperature. Uncheck to directly copy the temperature from the selected entities",
           "sync_entity_ids": "The list of the entities used to synchronize the internal temperature of the underlying devices. There should be one per underlying device. Should be a calibration entity if checkbox is selected or a temperature entity otherwise. Both are `number` entities."
         }
+      },
+      "valve_regulation": {
+        "title": "Samoregulácia s ventilon",
+        "description": "Konfigurácia samoregulácie s priamym ovládaním ventilu&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/sk/self-regulation.md#auto-régulation-par-contrôle-direct-de-la-vanne)",
+        "data": {
+          "offset_calibration_entity_ids": "Entity kalibrácie offsetu",
+          "opening_degree_entity_ids": "Entity stupňa otvorenia",
+          "closing_degree_entity_ids": "Entity stupňa zatvorenia",
+          "proportional_function": "Algoritmus",
+          "opening_threshold_degree": "Prah otvorenia",
+          "min_opening_degrees": "Minimálne stupne otvorenia",
+          "max_opening_degrees": "Maximálny stupeň otvorenia",
+          "max_closing_degree": "Maximálny stupeň zatvorenia"
+        },
+        "data_description": {
+          "offset_calibration_entity_ids": "Zoznam entít 'kalibrácie offsetu'. Nastavte, ak má váš TRV entitu pre lepšiu reguláciu. Mala by byť jedna na každú základnú klimatickú entitu",
+          "opening_degree_entity_ids": "Zoznam entít 'stupňa otvorenia'. Mala by byť jedna na každú základnú klimatickú entitu",
+          "closing_degree_entity_ids": "Zoznam entít 'stupňa zatvorenia'. Nastavte, ak má váš TRV entitu pre lepšiu reguláciu. Mala by byť jedna na každú základnú klimatickú entitu",
+          "proportional_function": "Algoritmus, ktorý sa má použiť (TPI je v súčasnosti jediný)",
+          "opening_threshold_degree": "Hodnota otvorenia ventilu, pod ktorou by mal byť ventil považovaný za zatvorený (a potom bude platný 'max_closing_degree')",
+          "min_opening_degrees": "Minimálna hodnota stupňa otvorenia pre každé základné zariadenie, oddelená čiarkami. Predvolená hodnota je 0. Príklad: 20, 25, 30",
+          "max_opening_degrees": "Maximálna hodnota stupňa otvorenia pre každé základné zariadenie, oddelené čiarkami. Predvolená hodnota je 100. Ventil sa nikdy neotvorí viac ako táto hodnota. Príklad: 80, 85, 90",
+          "max_closing_degree": "Maximálna hodnota stupňa zatvorenia. Ventil sa nikdy nezatvorí viac ako táto hodnota. Nastavte na 100 pre úplné zatvorenie ventilu"
+        }
       }
     },
     "error": {
@@ -270,6 +294,8 @@
       "valve_regulation_nb_entities_incorrect": "The number of valve entities for valve regulation should be equal to the number of underlyings",
       "sync_device_internal_temp_nb_entities_incorrect": "The number of entities for synchronize device internal temperature should be equal to the number of underlyings",
       "min_opening_degrees_format": "A comma separated list of positive integer is expected. Example: 20, 25, 30",
+      "max_opening_degrees_format": "Očakáva sa zoznam kladných celých čísel medzi 0 a 100 oddelených čiarkou. Príklad: 80, 85, 90",
+      "min_max_opening_degrees_inconsistent": "Pre každé základné zariadenie musí byť max_opening_degrees striktne väčší ako min_opening_degrees. Skontrolujte prosím svoju konfiguráciu.",
       "vswitch_configuration_incorrect": "The command customization configuration is incorrect. It is required for underlying entities that are not switches, and the format must be service_name[/attribute:value]. More information is available in the README"
     },
     "abort": {
@@ -535,6 +561,30 @@
           "sync_with_calibration": "Check to apply the offset calibration when synchronizing the internal temperature. Uncheck to directly copy the temperature from the selected entities",
           "sync_entity_ids": "The list of the entities used to synchronize the internal temperature of the underlying devices. There should be one per underlying device. Should be a calibration entity if checkbox is selected or a temperature entity otherwise. Both are `number` entities."
         }
+      },
+      "valve_regulation": {
+        "title": "Samoregulácia s ventilon - {name}",
+        "description": "Konfigurácia samoregulácie s priamym ovládaním ventilu&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/sk/self-regulation.md#auto-régulation-par-contrôle-direct-de-la-vanne)",
+        "data": {
+          "offset_calibration_entity_ids": "Entity kalibrácie offsetu",
+          "opening_degree_entity_ids": "Entity stupňa otvorenia",
+          "closing_degree_entity_ids": "Entity stupňa zatvorenia",
+          "proportional_function": "Algoritmus",
+          "opening_threshold_degree": "Prah otvorenia",
+          "min_opening_degrees": "Minimálne stupne otvorenia",
+          "max_opening_degrees": "Maximálny stupeň otvorenia",
+          "max_closing_degree": "Maximálny stupeň zatvorenia"
+        },
+        "data_description": {
+          "offset_calibration_entity_ids": "Zoznam entít 'kalibrácie offsetu'. Nastavte, ak má váš TRV entitu pre lepšiu reguláciu. Mala by byť jedna na každú základnú klimatickú entitu",
+          "opening_degree_entity_ids": "Zoznam entít 'stupňa otvorenia'. Mala by byť jedna na každú základnú klimatickú entitu",
+          "closing_degree_entity_ids": "Zoznam entít 'stupňa zatvorenia'. Nastavte, ak má váš TRV entitu pre lepšiu reguláciu. Mala by byť jedna na každú základnú klimatickú entitu",
+          "proportional_function": "Algoritmus, ktorý sa má použiť (TPI je v súčasnosti jediný)",
+          "opening_threshold_degree": "Hodnota otvorenia ventilu, pod ktorou by mal byť ventil považovaný za zatvorený (a potom bude platný 'max_closing_degree')",
+          "min_opening_degrees": "Minimálna hodnota stupňa otvorenia pre každé základné zariadenie, oddelená čiarkami. Predvolená hodnota je 0. Príklad: 20, 25, 30",
+          "max_opening_degrees": "Maximálna hodnota stupňa otvorenia pre každé základné zariadenie, oddelené čiarkami. Predvolená hodnota je 100. Ventil sa nikdy neotvorí viac ako táto hodnota. Príklad: 80, 85, 90",
+          "max_closing_degree": "Maximálna hodnota stupňa zatvorenia. Ventil sa nikdy nezatvorí viac ako táto hodnota. Nastavte na 100 pre úplné zatvorenie ventilu"
+        }
       }
     },
     "error": {
@@ -546,6 +596,8 @@
       "valve_regulation_nb_entities_incorrect": "The number of valve entities for valve regulation should be equal to the number of underlyings",
       "sync_device_internal_temp_nb_entities_incorrect": "The number of entities for synchronize device internal temperature should be equal to the number of underlyings",
       "min_opening_degrees_format": "A comma separated list of positive integer is expected. Example: 20, 25, 30",
+      "max_opening_degrees_format": "Očakáva sa zoznam kladných celých čísel medzi 0 a 100 oddelených čiarkou. Príklad: 80, 85, 90",
+      "min_max_opening_degrees_inconsistent": "Pre každé základné zariadenie musí byť max_opening_degrees striktne väčší ako min_opening_degrees. Skontrolujte prosím svoju konfiguráciu.",
       "vswitch_configuration_incorrect": "The command customization configuration is incorrect. It is required for underlying entities that are not switches, and the format must be service_name[/attribute:value]. More information is available in the README"
     },
     "abort": {
